<resources>
    <string name="app_name">Suite Gabriel</string>
    <string name="close_nav">Close</string>
    <string name="open_nav">Open</string>
    <string name="home">Home</string>
    <string name="giroscopio">Giroscopio</string>
    <string name="cr_ditos">Créditos</string>
    <string name="sensor_humedad">Sensor Humedad</string>
    <string name="info">Info</string>
    <string name="sensor_presi_n">Sensor Presión</string>
    <string name="salir">Salir</string>
    <string name="icono_de_cada_uno">Icono de cada uno</string>
    <string name="sensores_de_gabriel">Sensores de Gabriel</string>
    <string name="luminosidad">Luminosidad</string>
    <string name="proximidad">Proximidad</string>
    <string name="temperatura">Temperatura</string>
    <string name="suite_jvg">Suite JVG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">C</string>
    <string name="brackets">( )</string>
    <string name="elevator">^</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="comma">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="calculator_results">0</string>
    <string name="calculator_workings">""</string>
    <string name="calcular">Calcular</string>
    <string name="calculadora">Calculadora</string>
    <string name="todo">TODO</string>
    <string name="n_mero_1">Número 1</string>
    <string name="n_mero_2">Número 2</string>
    <string name="gabriel_ramos_l_pez">Gabriel Ramos López</string>
    <string name="curso_2_dam">Curso: 2º DAM</string>
    <string name="fecha">Fecha:</string>
    <string name="milogo">TODO</string>
    <string name="atr_s">Atrás</string>
    <string name="autor">AUTOR</string>
    <string name="versi_n">Versión:</string>
    <string name="resultados">RESULTADOS</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicaci_n">Multiplicación</string>
    <string name="divisi_n">División</string>
    <string name="email">gabrielramos@centroculturalsalmantino.com</string>
    <string name="versi_n_1_0_4">Versión: 1.0.4</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="numero_1">Número 1</string>
    <string name="numero_2">Número 2</string>
    <string name="musica">Musica</string>
    <string name="oficina">Oficina</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="ese_soy_yo_el_creador">Ese soy yo, el creador</string>
    <string name="_2023">2023</string>
    <string name="git">Git</string>
    <string name="linked">Linked</string>
    <string name="creador">Creador</string>
    <string name="francotirador">Francotirador</string>
    <string name="elementos_utilizados">Elementos utilizados</string>
    <string name="info_section">1. Fragmentos\n2. Clase Manager y SensorManager para los sensores\n3. Clase Bitmap para \'sobreescribir\' en un fragmento\n4. Librería objecthunter para la calculadora\n5. Iconos de yesicon.app\n6. Etiqueta menu para el menu hamburguesa y navbar</string>
</resources>