<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".utils."
    tools:layout_editor_absoluteX="25dp"
    tools:layout_editor_absoluteY="0dp">


    <TextView
        android:id="@+id/calcTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="21dp"
        android:text="@string/calculadora"
        android:textColor="#EAEAEA"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="22dp"
        android:contentDescription="Logo calculadora"
        app:layout_constraintEnd_toStartOf="@+id/calcTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bicalculatorfill"
        tools:ignore="HardcodedText,MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="292dp"
        android:layout_height="212dp"
        android:layout_marginTop="353dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <Button
            android:id="@+id/sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D8D8D8"
            android:text="@string/sumar"
            android:textColor="#222222"
            android:textSize="20sp"
            app:cornerRadius="0sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D8D8D8"
            android:text="@string/restar"
            android:textColor="#222222"
            android:textSize="20sp"
            app:cornerRadius="0sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D8D8D8"
            android:text="@string/multiplicar"
            android:textColor="#222222"
            android:textSize="20sp"
            app:cornerRadius="0sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D8D8D8"
            android:text="@string/dividir"
            android:textColor="#222222"
            android:textSize="20sp"
            app:cornerRadius="0sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero_1"
        android:inputType="numberDecimal"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero_2"
        android:inputType="numberDecimal"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="207dp"
        android:layout_height="82dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/calc_og"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>